--- a/Source/midori/po/zh_CN.po
+++ b/Source/midori/po/zh_CN.po
@@ -3467,3 +3467,10 @@ msgstr "无法连接互联网"
 
 msgid "Your computer must be connected to a network to reach “%s”. ""Connect to a wireless access point or attach a network cable and try again."
 msgstr "无法连接到“%s”网站。请检查您计算机的网络设置，确认已连接到网络。"
+
+msgid "Can't find the page you're opening"
+msgstr "无法打开该网页"
+
+msgid "The page located at “%s” cannot be found. ""Check the web address for misspelled words and try again."
+msgstr "网页“%s”无法打开。请检查网址是否输入错误。"
+
