--- a/Source/midori/po/zh_CN.po
+++ b/Source/midori/po/zh_CN.po
@@ -3444,6 +3444,19 @@ msgstr "按过滤器列表屏蔽广告"
 msgid "Configure Advertisement filters"
 msgstr "配置广告过滤器"
 
+#: ../extensions/adblock/widget.vala:79
+msgid "Preferences"
+msgstr "偏好"
+
+#: ../extensions/adblock/widget.vala:91
+msgid "Disable"
+msgstr "禁止"
+
+#: ../extensions/adblock/widget.vala:127
+msgid "Type the locally saved the filter file and hit Entry.Form:file://filepath+filename,such as file:///home/test.txt."
+msgstr "输入本地保存的过滤器文件，然后点击entry键。"
+       "形式为:file://文件路径+文件名,例如file:///home/test.txt。"
+
 #: ../extensions/adblock/extension.vala:168
 msgid "Bl_ock image"
 msgstr "屏蔽图片(_O)"
