translate Display hidden elements

--- a/Source/midori/po/zh_CN.po
+++ b/Source/midori/po/zh_CN.po
@@ -3457,6 +3457,10 @@ msgid "Type the locally saved the filter file and hit Entry.Form:file://filepath
 msgstr "输入本地保存的过滤器文件，然后点击entry键。"
        "形式为:file://文件路径+文件名,例如file:///home/test.txt。"
 
+#: ../extensions/adblock/widget.vala:99
+msgid "Display hidden elements"
+msgstr "显示隐藏元素"
+
 #: ../extensions/adblock/extension.vala:168
 msgid "Bl_ock image"
 msgstr "屏蔽图片(_O)"
