--- a/Source/BrowserApp/po/zh_CN.po
+++ b/Source/BrowserApp/po/zh_CN.po
@@ -283,7 +283,7 @@ msgstr "选择 [文本]"
 #: ../midori/midori-browser.c:927 ../panels/midori-bookmarks.c:148
 #: ../midori/midori-bookmarks-db.c:153
 msgid "Bookmarks"
-msgstr "书签"
+msgstr "  书 签  "
 
 #: ../midori/midori-browser.c:1095
 msgid "New Folder"
@@ -1938,7 +1938,7 @@ msgstr "搜索书签"
 
 #: ../panels/midori-history.c:111
 msgid "History"
-msgstr "历史"
+msgstr "  历 史  "
 
 #: ../panels/midori-history.c:133
 msgid "Today"
@@ -3266,7 +3266,7 @@ msgstr "管理作为应用程序安装的网站"
 
 #: ../extensions/transfers.vala:98
 msgid "Transfers"
-msgstr "下载管理器"
+msgstr "  下 载  "
 
 #: ../extensions/transfers.vala:111 ../extensions/transfers.vala:391
 msgid "Clear All"
