zgh 修改网页链接右击弹出菜单中的菜单项，屏蔽链接屏蔽图片删除与Open with添加翻译

--- a/Source/BrowserApp/po/zh_CN.po
+++ b/Source/BrowserApp/po/zh_CN.po
@@ -1819,8 +1819,8 @@ msgid "Search with %s"
 msgstr "用 %s 搜索"
 
 #: ../midori/sokoke.c:219
-msgid "Open with"
-msgstr "打开方式"
+msgid "Open _with…"
+msgstr "打开方式(_W)…"
 
 #: ../midori/sokoke.c:227
 #, c-format
