zgh 修改页面属性对话框， 给地址栏第一图标添加弹出对话框功能

--- a/Source/BrowserApp/po/zh_CN.po
+++ b/Source/BrowserApp/po/zh_CN.po
@@ -3550,3 +3550,9 @@ msgstr "%d 字节"
 msgid "OpenFile"
 msgstr "执行"
 
+msgid "PageInfo"
+msgstr "页面属性"
+
+msgid "Web Page not exist"
+msgstr "要查看的网页不存在"
+
