ZRL 扩展Web Security使能API接口，应用层可控制安全开关

--- a/Source/WebCore/platform/gtk/po/zh_CN.po
+++ b/Source/WebCore/platform/gtk/po/zh_CN.po
@@ -2531,3 +2531,12 @@ msgstr ""
 
 #~ msgid "_Searchable Index"
 #~ msgstr "可搜索索引(_S)"
+
+#: ../../../WebKit2/UIProcess/API/gtk/WebKitSettings.cpp
+msgid "Enable Web Security"
+msgstr "启用Web安全策略"
+
+#: ../../../WebKit2/UIProcess/API/gtk/WebKitSettings.cpp
+msgid "Whether Web Security Policy should be enabled."
+msgstr "是否启用Web安全策略"
+
