第一次启动浏览器时（无config），默认启动扩展天气查询等

--- a/Source/BrowserApp/po/zh_CN.po
+++ b/Source/BrowserApp/po/zh_CN.po
@@ -3585,7 +3585,7 @@ msgid "Quick view real-time weather"
 msgstr "快速查看实时天气"
 
 #: ../extensions/youdao_translation.c:79
-msgid "Youdao translatin"
+msgid "Youdao translation"
 msgstr "有道翻译"
 
 #: ../extensions/youdao_translation.c:80
