ZRL Tag for 0.0.3 version

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+0.0.3
+  - 完善网站鉴定功能.
+  - 增加阻止网站跟踪DNT功能
+  - 增加双击缩放功能
+  - 隐私浏览模式下隐藏菜单栏的历史记录菜单
+  - 快速拨号菜单图片尺寸调整，减小变形
+  - 支持编译生成64位系统安装包
+
 0.0.2
   - 增加网站鉴定功能.
   - 增加阅读模式.
