--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+cdosbrowser (0.0.3) Jan23; urgency=low
+
+  * New upstream release
+  - 完善网站鉴定功能.
+  - 增加阻止网站跟踪DNT功能
+  - 增加双击缩放功能
+  - 隐私浏览模式下隐藏菜单栏的历史记录菜单
+  - 快速拨号菜单图片尺寸调整，减小变形
+  - 支持编译生成64位系统安装包
+ -- ZhangRuili <zhangrl_os@sari.ac.cn>  Fri, 23 Dec 2015 17:33:08 +0800
+
 cdosbrowser (0.0.2) Jan13; urgency=low
 
   * New upstream release
