ZRL Tag for 0.0.4 version

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+0.0.4
+  - 修复浏览器运行时断错误异常
+  - 修复浏览器运行过程中的命令行报错
+  - 字符串资源规范
+  - 完善阻止网站跟踪功能
+  - 实现用户位置信息设置和提示功能
+  - 下载功能完善
+
 0.0.3
   - 完善网站鉴定功能.
   - 增加阻止网站跟踪DNT功能
