--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+0.1.5
+  - 用户名和密码保存功能完善，覆盖了更多场景，支持设置中的密码查看功能
+  - 用户位置信息提示功能，可在标签页上显示禁止或允许图标
+  - 修复添加书签目录时浏览器崩溃问题
+
 0.0.4
   - 修复浏览器运行时断错误异常
   - 修复浏览器运行过程中的命令行报错
