ZRL Tag for 0.1.6 version

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+0.1.6
+  - WebKit内核升级到webkitgtk2.6.5版本
+  - 天气预报扩展可自动匹配用户当前所在城市（当前只支持定位到直辖市）
+  - 优化打开网页性能，提升1～2秒
+  - 修复126信箱无法登陆问题
+  - 智能缩放功能提升，着重体现主页面内容
+  - 网页打开过程中进度条体验优化，去除地址栏进度条，Tab页面增加Spinner动画
+  - 修复用户名/密码自动填充导致的Crash缺陷
+  - 修复加载flash插件Crash的缺陷
+
 0.1.5
   - 用户名和密码保存功能完善，覆盖了更多场景，支持设置中的密码查看功能
   - 用户位置信息提示功能，可在标签页上显示禁止或允许图标
