zgh 下载各功能完善，下载数据存储，下载图标变化，管理器页面问题，管理器数据消失问题 等解决

--- a/Source/BrowserApp/po/zh_CN.po
+++ b/Source/BrowserApp/po/zh_CN.po
@@ -1293,6 +1293,9 @@ msgstr "检查元素(_E)"
 msgid "Open or download file from %s"
 msgstr "从 %s 打开或下载文件"
 
+msgid "Open or download file"
+msgstr "打开或下载文件"
+
 #: ../midori/midori-view.c:2729 ../midori/midori-view.c:2732
 #, c-format
 msgid "File Name: %s"
