ZRL Tag for 0.1.7 version

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+0.1.7
+  - 默认以多进程打开网页
+  - 下载功能完善：历史下载记录保存、下载任务时图标提示、解决点击下载图标打开管理器显示书签页面问题、解决下载记录消失问题
+  - 解决当某URL已存在于打开的Tab中，在新标签页中输入该URL不会再打开该网址的问题
+  - 网址认证查询功能缺陷修复：同时打开多个Tab页时，信息查询异常
+
 0.1.6
   - WebKit内核升级到webkitgtk2.6.5版本
   - 天气预报扩展可自动匹配用户当前所在城市（当前只支持定位到直辖市）
